Port MezzConfig GUI to Minecraft 26.2 on its own branch